<resources>
    <string name="app_name">QR Attendance</string>
    <string name="locationInfo">String.valueOf(MainActivity.latitude) + " " + String.valueOf(MainActivity.longitude)</string>
    <string name="button">Scan</string>
    <string name="bg_institute">bg_institute</string>
    <string name="user_image">userImage</string>
    <string name="student_name">Student Name</string>
    <string name="institute_name">SIT</string>
    <string name="location_fetch_msg">Obtaining location</string>
    <string name="student_detail_heading">Change Your Details</string>
    <string name="age_input">Age</string>
    <string name="last_name_input">Last Name</string>
    <string name="first_name_input">First Name</string>
    <string name="female_input_rg">Female</string>
    <string name="male_input_rg">Male</string>
    <string name="edit_student_details">edit student details</string>
    <string name="student_detail_change_description">student detail edit button</string>
    <string name="student_log_activity">Opens student Attendance activity</string>
    <string name="attendance_logs_heading">Attendance Logs</string>
    <string name="attendance">Attendance</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="edit_image">Edit Image</string>
</resources>