<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/mobile_bg">


  <TextView
      android:id="@+id/app_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="40dp"
      android:gravity="center"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:textSize="35sp"
      android:textStyle="bold" />



  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp"
      app:cardCornerRadius="15dp"
      app:cardElevation="1dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="10dp"
          android:contentDescription="@string/user_image"
          android:scaleType="centerCrop"
          android:src="@drawable/user_avatar" />
      <!--                android:background="@drawable/rounded_image"-->
      <LinearLayout
          android:id="@+id/student_name_section"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/imageView2"
          android:layout_marginTop="15dp"
          android:gravity="center_horizontal">


        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="32dp"
            android:text="@string/student_name"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            />

        <Button
            android:id="@+id/student_detail_change"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:drawableLeft="@drawable/baseline_edit_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:onClick="openChangeDetails"
            android:contentDescription="@string/student_detail_change_description"
            android:enabled="true"/>



      </LinearLayout>
      <TextView
          android:id="@+id/instituteName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/student_name_section"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="8dp"
          android:text="@string/institute_name"
          android:textSize="18sp"
          tools:ignore="MissingConstraints" />

      <Button
          android:id="@+id/button_Scan"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/instituteName"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="80dp"
          android:layout_marginBottom="5dp"
          android:textSize="20sp"
          android:textColor="@color/white"
          android:drawableLeft="@drawable/baseline_qr_code_scanner_24"
          android:text="@string/button"
          android:enabled="false"

          tools:ignore="MissingConstraints" />

      <Button
          android:id="@+id/button_student_logs"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/button_Scan"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="32dp"
          android:textSize="10sp"
          android:textColor="@color/white"
          android:drawableLeft="@drawable/baseline_playlist_add_check_24"
          android:onClick="openStudentLogs"
          android:text="@string/attendance"

          tools:ignore="MissingConstraints" />

    </RelativeLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:layout_marginTop="-80dp"
      app:cardCornerRadius="100dp"
      app:cardElevation="8dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textViewBasic2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="20dp"
          android:text="@string/location_fetch_msg"
          android:textColor="#FF0000"
          android:textSize="11sp"
          android:textStyle="bold"
          tools:ignore="MissingConstraints" />

    </RelativeLayout>



  </androidx.cardview.widget.CardView>



</LinearLayout>