<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bg_institute" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-40dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/user_image" />

            <TextView
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="32dp"
                android:text="@string/student_name"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/instituteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studentName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-12dp"
                android:text="@string/institute_name"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_Scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instituteName"
                android:layout_marginTop="194dp"
                android:layout_marginBottom="32dp"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/baseline_qr_code_scanner_24"
                android:text="@string/button"
                tools:ignore="MissingConstraints" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-100dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewBasic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/location_fetch_msg"
                android:textSize="11sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>




    <!--Should no longer need this button as it now auto-searches for location on start-->
    <!--    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="startLocationUpdates"
            android:text="@string/request_location_updates"
            app:layout_constraintBottom_toTopOf="@+id/textViewBasic"
            app:layout_constraintEnd_toEndOf="@+id/textViewBasic"
            app:layout_constraintHorizontal_bias="0.748"
            app:layout_constraintStart_toStartOf="@+id/textViewBasic"
            tools:ignore="MissingConstraints" />-->



</LinearLayout>