<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentDetailActivity"
    android:background="@drawable/mobile_bg"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/student_detail_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:text="@string/student_detail_heading"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/student_detail_heading"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/studentfname_input"
                android:layout_marginTop="100dp"
                android:layout_marginHorizontal="50dp"
                android:layout_centerHorizontal="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editName"
                    android:inputType="textPersonName"
                    android:hint="@string/name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/student_age_input"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/studentfname_input"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="14dp"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/age"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/studentgender_input"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/student_age_input"
                android:layout_centerHorizontal="true"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female_input_rg" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male_input_rg" />
            </RadioGroup>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/student_detail_submit"
                android:text="Submit"
                android:layout_below="@+id/studentgender_input"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="handleSubmit"
                />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>